# casaos-gen

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  README.md  casaos-template.yml  example.yml  input1.yml  ollama.casaos.yml  output-template.yml  params.generated.yml  params.yml  pyproject.toml  requirements.txt  test-compose.yml  test-output.yml  test-params.yml  test.yaml
casaos_gen/: __init__.py  cli.py  compose_normalize.py  console.py  constants.py  diff_engine.py  i18n.py  incremental.py  infer.py  llm_stage1.py  llm_translate.py  main.py  models.py  parser.py  pipeline.py  refine_mode.py  template_stage.py  translations.yml  version_manager.py  webui.py  yaml_out.py
docs/: ollama-casaos-manifest.md
frontend/: app.jsx  app.jsx.backup  index.html  styles.css  styles.css.backup
frontend/components/: AnimatedContainer.jsx  Button.jsx  Card.jsx  CodeViewer.jsx  Dropzone.jsx  Form.jsx  Stepper.jsx  Tabs.jsx  Toast.jsx  utils.jsx
frontend/steps/: StepExport.jsx  StepLoadCompose.jsx  StepMetadata.jsx  StepPreview.jsx
frontend/views/: FullWorkflowView.jsx  LandingView.jsx  QuickEditView.jsx
smartconvert/: develop.md
tests/: test_casaos_gen.py
